<resources>
    <string name="app_name">OnlineShop</string>

    <!--LIST CATEGORIES-->
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>

    <!--AUTHORIZATION-->
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="already_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_apple">Sign in with Apple</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user_already_exists">This user already exists</string>
    <string name="first_name_empty">First name is empty</string>
    <string name="last_name_empty">Last name is empty</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="data_not_valid">Data is not valid</string>
    <string name="name_email_not_valid">First name or email not valid</string>
    <string name="password_not_valid">Password not valid</string>
    <string name="error_connection_server">Error connection server</string>
    <string name="error_auth">Error auth: %1$s</string>

    <!--CONTENT DESCRIPTION-->
    <string name="cd_sign_in_google">Icon sign in with google</string>
    <string name="cd_sign_in_apple">Icon sign in with apple</string>
    <string name="cd_item_category">Item category</string>
    <string name="cd_add_item">Add item</string>
    <string name="cd_add_product">Add product</string>
    <string name="cd_image_product">Image product</string>
    <string name="cd_image_brands">Image brands</string>
    <string name="cd_trade_store">Trade store</string>
    <string name="cd_payment_method">Payment method</string>
    <string name="cd_balance">Balance</string>
    <string name="cd_trade_history">Trade history</string>
    <string name="cd_restore_purchase">Restore purchase</string>
    <string name="cd_help">Help</string>
    <string name="cd_log_out">Log out</string>

    <!--NAVIGATION DRAWER-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--TEXT BOTTOM FRAGMENT-->
    <string name="fragment_favorite">This is favorite fragment</string>
    <string name="fragment_cart">This is cart fragment</string>
    <string name="fragment_chat">This is chat fragment</string>
    <string name="title_activity_bottom">BottomActivity</string>

    <!--ITEMS BOTTOM MENU-->
    <string name="home">Trade by bata</string>
    <string name="trade_by">Trade by</string>
    <string name="bata">bata</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="latest">Latest</string>
    <string name="flash_sale">Flash sale</string>
    <string name="brands">Brands</string>
    <string name="add_favorite">Add favorite</string>

    <!--HOME-->
    <string name="label_price_latest">$ %1$s</string>
    <string name="label_discount">%1$s%% off</string>
    <string name="hint_search">What are you looking for?</string>
    <string name="search">Search</string>
    <string name="error_list_category">Error list category: %1$s</string>
    <string name="error_latest_products">Error latest products: %1$s</string>
    <string name="error_sale_products">Error sale products: %1$s</string>
    <string name="error_brands">Error brands: %1$s</string>

    <!--ITEM DETAILS-->
    <string name="about_product">About product</string>
    <string name="cd_like_item_product">Like item product</string>
    <string name="cd_share_item_product">Share item product</string>
    <string name="cd_item_image_product">Image item product</string>
    <string name="cd_image_star">Product rating</string>
    <string name="colors">Color:</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="label_reviews">(%1$s reviews)</string>
    <string name="label_sum">#%1$s</string>
    <string name="placeholder_count">1</string>
    <string name="_1">1</string>
    <string name="error_item_product">Error item product: %1$s</string>
    <string name="color_selected">Color selected</string>

    <!--ORDER-->
    <string name="order_fragment">Order fragment</string>

    <!--PROFILE-->
    <string name="change_photo">Change photo</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="permission_denied">Permission denied</string>
    <string name="error_upload_photo">Error upload photo: %1$s</string>
    <string name="error_logout">Error logout: %1$s</string>
    <string name="cd_back">Back</string>

</resources>