<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_bottom_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_bottom_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />

    <item
        android:id="@+id/nav_bottom_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/nav_bottom_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat" />

    <item
        android:id="@+id/nav_bottom_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>