<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@id/nav_bottom_home">

    <fragment
        android:id="@+id/nav_bottom_home"
        android:name="com.most4dev.onlineshop.presentation.home.fragments.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_bottom_home_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_bottom_favorite"
        android:name="com.most4dev.onlineshop.presentation.home.fragments.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite"/>
    <fragment
        android:id="@+id/nav_bottom_cart"
        android:name="com.most4dev.onlineshop.presentation.home.fragments.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart"/>
    <fragment
        android:id="@+id/nav_bottom_chat"
        android:name="com.most4dev.onlineshop.presentation.home.fragments.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat"/>
    <fragment
        android:id="@+id/nav_bottom_profile"
        android:name="com.most4dev.onlineshop.presentation.home.fragments.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.most4dev.onlineshop.presentation.home.fragments.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
</navigation>